# rde-urdf

./: .gitignore  .vscodeignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Configuration.html  IntelliSense.html  LICENSE  LICENSE-COMPATIBILITY.md  OpenSCAD.html  README.md  Support.html  THIRD_PARTY_NOTICES.txt  WebXRPreview.html  index.html  language-configuration.json  mcp.html  mkdocs.yml  package-lock.json  package.json  search.html  test-mcp-validation.js  test_svg.mjs  test_svg_export.mjs  test_worker.mjs  tmp-npm-ls.json  tsconfig.json  tutorial.html  webpack.config.js
.github/: FUNDING.yml  copilot-instructions.md
docs/: Configuration.md  IntelliSense.md  OpenSCAD.md  Support.md  Validation.md  WebXRPreview.md  index.md  mcp.md  test-documentation.md  tutorial.md  xacro-configuration.md
prompts/: custom-urdf-instructions.md  urdf-instructions.md
schemas/: urdf-schema.json  xacro-schema.json
search/: search_index.json
snippets/: openscad-snippets.json  xacro-snippets.json
src/: 3DViewerDocument.ts  3DViewerProvider.ts  agents.ts  extension.ts  mcp.ts  openscad.ts  openscadCompletion.ts  openscadDefinitionProvider.ts  openscadExport.ts  openscadValidation.ts  preview.ts  previewManager.ts  urdfDefinitionProvider.ts  urdfXacroCompletion.ts  urdfXacroValidation.ts  utils.ts  webXRPreviewManager.ts  xacroConfig.ts
src/static/: style.css
src/test/testdata/test_robot/: common_macros.xacro  package.xml
src/test/testdata/test_robot/meshes/: arm.dae  base.stl
src/test/testdata/ws/src/pkg2/: package.xml
src/test/testdata/ws/src/pkg2/urdf/: pkg2.xacro
(+81 files in other folders)
